# PlantAssistant

./: .gitignore  CMakeLists.txt  README.md  function.md  sql.txt
res/QSS/: SelectCard.qss  addPlantCard.qss  addremindertask.qss  careRemind.qss  informationManage.qss  messagebox.qss  plantAssistant.qss  plantCard.qss  popupDialog.qss  sign.qss  taskWidget.qss
src/: main.cpp
src/CoreData/CareRemind/: Remind.cpp  Remind.h
src/CoreData/Plant/: PlantInfo.cpp  PlantInfo.h
src/CoreData/User/: User.cpp  User.h
src/Dialogs/AddPlantCard/: addplantcarddialog.cpp  addplantcarddialog.h  addplantcarddialog.ui
src/Dialogs/AddRemindTask/: addremindtask.cpp  addremindtask.h  addremindtask.ui
src/Dialogs/MessageBox/: pmessagebox.cpp  pmessagebox.h  pmessagebox.ui
src/Dialogs/PopUpDialog/: popupdialog.cpp  popupdialog.h  popupdialog.ui
src/Manager/: Manager.cpp  Manager.h
src/Widgets/CareRemind/: careremind.cpp  careremind.h  careremind.ui
src/Widgets/PlantCard/: plantcard.cpp  plantcard.h  plantcard.ui
src/Widgets/PlantInformationManager/: plantinformationmanage.cpp  plantinformationmanage.h  plantinformationmanage.ui
src/Widgets/SelectCard/: selectcard.cpp  selectcard.h  selectcard.ui  selectcardmanager.cpp  selectcardmanager.h  selectcardmanager.ui
src/Widgets/TaskWidget/: taskwidget.cpp  taskwidget.h  taskwidget.ui  taskwidgetmanager.cpp  taskwidgetmanager.h  taskwidgetmanager.ui
src/Window/: login.cpp  login.h  login.ui  plantassistant.cpp  plantassistant.h  plantassistant.ui
